--- a/page_manager.routing.yml
+++ b/page_manager.routing.yml
@@ -82,6 +82,32 @@ page_manager.access_condition_delete:
   requirements:
     _entity_access: page.update
 
+#### Static Contexts
+
+page_manager.static_context_add:
+  path: '/admin/structure/page_manager/manage/{page}/context/add'
+  defaults:
+    _form: '\Drupal\page_manager\Form\StaticContextAddForm'
+    _title: 'Add new static context'
+  requirements:
+    _entity_access: page.update
+
+page_manager.static_context_edit:
+  path: '/admin/structure/page_manager/manage/{page}/context/edit/{name}'
+  defaults:
+    _form: '\Drupal\page_manager\Form\StaticContextEditForm'
+    _title_callback: '\Drupal\page_manager\Controller\PageManagerController::editStaticContextTitle'
+  requirements:
+    _entity_access: page.update
+
+page_manager.static_context_delete:
+  path: '/admin/structure/page_manager/manage/{page}/context/delete/{name}'
+  defaults:
+    _form: '\Drupal\page_manager\Form\StaticContextDeleteForm'
+    _title: 'Delete static context'
+  requirements:
+    _entity_access: page.update
+
 #### Display variants
 
 page_manager.display_variant_select:
